# lightwallet-tools

./: AGENTS.md  CONTEXT.md  Cargo.toml  LICENSE-MIT  README.md  cli-plan.md  high-level.md  justfile  nym-embedded-plan.md  nym-plan.md  onion-plan.md  test-coverage-plan.md  utxo-ladder.decl
.github/: CODEOWNERS
crates/canonical/: Cargo.toml  README.md  build.rs
crates/canonical/src/: lib.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs  render.rs
crates/cli/tests/: e2e.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: canonical.rs  crosslink.rs  error.rs  header.rs  identity.rs  indexer.rs  lib.rs  params.rs  streamer.rs  transport.rs
crates/core/tests/: live.rs  mock_endpoint.rs
crates/crosslink/: Cargo.toml  README.md  build.rs
crates/crosslink/src/: lib.rs
crates/darkside/: Cargo.toml  README.md
crates/darkside-chain/: Cargo.toml  README.md
crates/darkside-chain/src/: account.rs  block.rs  chain.rs  error.rs  fabricate.rs  lib.rs  mempool.rs  notes.rs  params.rs  scan.rs  seed.rs  transparent.rs  tree.rs
crates/darkside-chain/tests/: chain.rs
crates/darkside-decl/: Cargo.toml  README.md
crates/darkside-decl/src/: lib.rs  parse.rs
crates/darkside-decl/tests/: parse.rs
crates/darkside-repl/: Cargo.toml  README.md
crates/darkside-repl/src/: main.rs
crates/darkside-serve/: Cargo.toml  README.md
crates/darkside-serve/src/: canonical.rs  command.rs  control.rs  crosslink.rs  driver.rs  indexer.rs  lib.rs  service.rs  wire.rs
crates/darkside-serve/tests/: control.rs  serve.rs
crates/darkside/src/: main.rs
crates/test-support/: Cargo.toml  README.md
crates/test-support/src/: canonical.rs  crosslink.rs  lib.rs  mock.rs  socks5.rs
crates/transport-nym/: Cargo.toml  README.md
crates/transport-nym/src/: lib.rs
crates/transport-nym/tests/: live.rs  tunnel.rs
crates/transport-tor/: Cargo.toml  README.md
crates/transport-tor/src/: lib.rs
crates/transport-tor/tests/: live.rs
docs/adr/: 0001-structural-unlinkability-domains.md  0002-synthetic-chains-over-empty-prehistory.md
docs/agents/: domain.md  issue-tracker.md
proto/canonical/: README.md
proto/overlay/: crosslink.proto
proto/overlay/reference/: README.md  crosslink_monolith-service.proto
