[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.lints.rust]
missing_docs = "deny"

[workspace.dependencies]
prost = "0.14"
tonic = "0.14"
futures-util = "0.3"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
protox = "0.9"
tokio = "1"
tower = { version = "0.5", features = ["util"] }
hyper-util = "0.1"
arti-client = { version = "0.44", features = ["tokio"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
prost-reflect = "0.16"
serde_json = "1"
hex = "0.4"
anyhow = "1"
