[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"
# Set before publishing the library crates to crates.io:
# repository = "https://github.com/<org>/lightwallet-tools"

[workspace.lints.rust]
missing_docs = "deny"

[workspace.dependencies]
prost = "0.14"
tonic = "0.14"
futures-util = "0.3"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
protox = "0.9"
tokio = "1"
tower = { version = "0.5", features = ["util"] }
hyper-util = "0.1"
arti-client = { version = "0.44", features = ["tokio"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
prost-reflect = "0.16"
axum = "0.8"
ureq = { version = "3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# darkside zcash stack. Proving circuits are deliberately off: darkside
# constructs dummy proofs and verifies nothing.
zcash_protocol = { version = "0.10", features = ["local-consensus"] }
zcash_primitives = { version = "0.29", default-features = false, features = ["std"] }
zcash_keys = { version = "0.15", features = ["sapling", "orchard", "transparent-inputs"] }
zcash_address = "0.13"
zcash_transparent = "0.9"
sapling-crypto = { version = "0.7", default-features = false, features = ["std"] }
orchard = { version = "0.15", default-features = false, features = ["std"] }
zcash_note_encryption = "0.4"
incrementalmerkletree = { version = "0.8", features = ["legacy-api"] }
shardtree = "0.7"
zcash_encoding = "0.4"
# Direct use of types from the zcash stack's own graph, pinned to what it resolves
zip32 = "0.2"
bls12_381 = "0.8"
pasta_curves = "0.5"
redjubjub = "0.8"
nonempty = "0.11"
ff = "0.13"
# rand 0.8 line: what sapling-crypto 0.7 / orchard 0.15 are built against
rand = "0.8"
rand_chacha = "0.3"
blake2b_simd = "1"
