[package]
name = "lightwallet-proto-canonical"
description = "Generated tonic/prost bindings for the canonical Zcash lightwalletd gRPC protocol"
readme = "README.md"
keywords = ["zcash", "lightwalletd", "grpc", "protobuf", "tonic"]
categories = ["cryptography::cryptocurrencies", "api-bindings"]
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
prost.workspace = true
tonic.workspace = true
tonic-prost.workspace = true

[build-dependencies]
prost.workspace = true
protox.workspace = true
tonic-prost-build.workspace = true
