[package]
name = "lightwallet-cli"
description = "lwcli: one-shot gRPC client for Zcash lightwallet indexers"
readme = "README.md"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "lwcli"
path = "src/main.rs"

[features]
# The transports are default-on features rather than unconditional deps
# because arti roughly doubles the CLI's build. The --transport enum values
# are cfg-gated to match, so a build without a feature never advertises a
# route the binary can't take (clap rejects the value outright).
default = ["tor", "nym"]
tor = ["dep:lightwallet-transport-tor", "dep:arti-client"]
nym = ["dep:lightwallet-transport-nym"]

[dependencies]
# Both variants on: the CLI is a point-at-anything debug tool, so variant
# selection is the --variant flag at runtime, never a build configuration.
lightwallet-core = { path = "../core", features = ["canonical", "crosslink"] }
lightwallet-proto-canonical = { path = "../canonical" }
lightwallet-proto-crosslink = { path = "../crosslink" }
lightwallet-transport-tor = { path = "../transport-tor", optional = true }
lightwallet-transport-nym = { path = "../transport-nym", optional = true }
anyhow.workspace = true
arti-client = { workspace = true, optional = true }
clap.workspace = true
clap_complete.workspace = true
futures-util.workspace = true
hex.workspace = true
prost.workspace = true
prost-reflect.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
tonic = { workspace = true, features = ["tls-ring", "tls-webpki-roots"] }

[dev-dependencies]
lightwallet-test-support = { path = "../test-support" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
