[package]
name = "lightwallet-proto-crosslink"
description = "Generated tonic/prost bindings for the Crosslink variant of the Zcash lightwalletd gRPC protocol"
readme = "README.md"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
prost.workspace = true
tonic.workspace = true
tonic-prost.workspace = true

[build-dependencies]
prost.workspace = true
protox.workspace = true
tonic-prost-build.workspace = true
