[package]
name = "darkside-repl"
description = "Interactive REPL console for a running darkside: mine, fund, reorg, and retime over the control surface"
readme = "README.md"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "darkside-repl"
path = "src/main.rs"

[dependencies]
darkside-serve = { path = "../darkside-serve" }
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
ureq.workspace = true
