[package]
name = "lightwallet-test-support"
description = "In-memory mock lightwalletd endpoints and a SOCKS5 test server for the lightwallet crates"
readme = "README.md"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
futures-util.workspace = true
hyper-util.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "rt"] }
tonic.workspace = true
tower.workspace = true
lightwallet-proto-canonical = { path = "../canonical" }
lightwallet-proto-crosslink = { path = "../crosslink" }
